<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/surface_primary"
    android:layout_height="match_parent"
    tools:context=".loginActivity">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/icon_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary_dark_red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tagline"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        style="@style/Widget.MyApp.CardView"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTagline">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/card_background"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconTint="@color/icon_primary"
                app:startIconDrawable="@drawable/outline_email_24"
                android:layout_marginTop="8dp"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconTint="@color/icon_primary"
                app:passwordToggleTint="@color/icon_primary"
                app:startIconDrawable="@drawable/outline_lock_24"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingTop="12dp"
                android:backgroundTint="?attr/colorPrimary"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/new_user_register"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Or"
                android:textColor="@color/text_primary"
                android:textSize="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardCornerRadius="8dp"
                android:elevation="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/g_login"
                android:backgroundTint="@color/border_light"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/google_icon"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:textColor="@color/text_primary"
                        android:text="  Login with"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Google"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:textColor="@color/text_primary"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_blue_dark"
        style="@style/MyProgressBar"
        android:elevation="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>

