<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/surface_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPass">
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/icon_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tagline"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            style="@style/Widget.MyApp.CardView"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTagline">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_background"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconTint="@color/icon_primary"
                    app:startIconDrawable="@drawable/outline_email_24"
                    android:layout_marginTop="8dp"
                    android:hint="Email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:paddingTop="12dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:paddingBottom="12dp"
                    android:textColor="@color/white"
                    android:text="Reset Password"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:paddingTop="12dp"
                    app:iconTint="@color/text_primary"
                    app:icon="@drawable/baseline_arrow_back_24"
                    android:paddingBottom="12dp"
                    android:textColor="@color/text_primary"
                    android:backgroundTint="@color/gray_light"
                    android:text="Back"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />




            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:elevation="10dp"
        android:indeterminateTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
